Fix Popover title wrapping in Chrome

--- a/src/ui/Popover.module.scss
+++ b/src/ui/Popover.module.scss
@@ -26,6 +26,7 @@
     font-size: 1.5em;
     margin: 0;
     padding: 0 .5em;
+    white-space: nowrap;
   }
 }
 
